maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:7: error: not found: value indiqueBiscuit
  indiqueBiscuit()
  ^JediEscaper:10: error: not enough arguments for method indiqueLeReste: (x: Int, y: Int, cmpt: Int)Unit.
Unspecified value parameter cmpt.
  indiqueLeReste(origine,0)
                ^JediEscaper:31: error: not enough arguments for method min: (a: Int, b: Int)Int.
Unspecified value parameter b.
  return min((min(x,y),min(a,b)))
            ^JediEscaper:53: error: not found: value caseVoisineLaPlusProche
    temp=caseVoisineLaPlusProche(x,y)
         ^